change configurations to version 1.0.3

--- a/anamnesis.cfg
+++ b/anamnesis.cfg
@@ -1,7 +1,7 @@
 #  Anamnesis clipboard manager configuration.
 #
-# Anamnesis will search for configuration files in the $XDG_DATA_DIRS and
-# $XDG_CONFIG_HOME directories. It defaults to:
+#  Anamnesis will search for configuration files in the $XDG_DATA_DIRS and
+#  $XDG_CONFIG_HOME directories. It defaults to:
 # 
 #    /usr/share/anamnesis/anamnesis.cfg
 #    ~/.config/anamnesis/anamnesis.cfg
@@ -22,78 +22,78 @@
 [log]
 
 # if True, log messages to a file, otherwise does not write logs
-activated=False
+#activated=False
 
 # formatter used to write the log messages
-formatter="%(asctime)s - %(message)s" 
+#formatter="%(asctime)s - %(message)s" 
 
 
 [limits]
 
 # the browser will show only that number of clips, older clips will be accessible with text search
-max_clips=100
+#max_clips=100
 
 # maximum size of a tooltip in characters
-max_tooltip_size=6000
+#max_tooltip_size=6000
 
 # maximum number of characters shown for each clipboard item on the gui
-max_rowtext_size=80
+#max_rowtext_size=80
 
 # maximum number of clips that could be stored in database, if necessary the oldest clips will be removed
-max_history_storage_count=10000
+#max_history_storage_count=10000
 
 
 [ui]
 
 # if False, most ui configuration will be ignored
-tweak_ui=False
+#tweak_ui=True
 
 # bg color for the list of clipboard items
-list_background=#000000
+#list_background=#000000
 
 # fg color for the list of clipboard items
-list_foreground=#ffffff
+#list_foreground=#ffffff
 
 # bg color of the selected item
-list_background_selected=#200000
+#list_background_selected=#200000
 
 # fg color of the selected item
-list_foreground_selected=#ffffff
+#list_foreground_selected=#ffffff
 
 # opacity of the window, must be between 0 and 1. Choose 1 for no transparency.
-opacity=0.9
+#opacity=0.9
 
 # enable to hide the window title and borders
-hide_window_decoration=True
+#hide_window_decoration=True
 
 # window bg color
-window_background=#000000
+#window_background=#000000
 
 # window width
-window_width=800
+#window_width=500
 
 # window height
-window_height=500
+#window_height=500
 
 
 [clipboard]
 
 # enable to write on the clipboard selection
-write_to_clipboard=True
+#write_to_clipboard=True
 
 # enable to write on the primary selection
-write_to_primary=True
+#write_to_primary=True
 
 # enable to read/store values from the clipboard
-read_from_clipboard=True
+#read_from_clipboard=True
 
 # enable to read/store values from the primary selection
-read_from_primary=False
+#read_from_primary=False
 
 
 [database]
 
 # performs a cleanup when the daemon is started
-cleanup_on_start=True
+#cleanup_on_start=True
 
 
