created clipboard unit_tests, updated changelog and some minor refactoring

--- a/anamnesis.cfg
+++ b/anamnesis.cfg
@@ -78,6 +78,9 @@
 
 [clipboard]
 
+# select the implementation used to read/write from/to the clipboard
+#clipboard_implementation=gtk
+
 # enable to write on the clipboard selection
 #write_to_clipboard=True
 
@@ -92,6 +95,9 @@
 
 
 [database]
+
+# select the implementation used to store the clipboard items
+#database_implementation=sqlite3fts 
 
 # performs a cleanup when the daemon is started
 #cleanup_on_start=True
